# Cellerator

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  benchamarks.md  custom_torch_ops.md  ncurses.md  optimization.md  out_of_scope_inventory.md  planning_strategy.md  pointer_migration_plan.md  pyproject.toml  scope.md  todo-status.md  todo.md  todos.md  validation.md
Archive/cellstack-root-coordination/: README.md  todo-status.md  todos.md
Archive/current-cellerator/: .gitignore  CMakeLists.txt  README.md  out_of_scope_inventory.md  pyproject.toml  style_hint.md  todo-status.md  todos.md
bench/: benchmark_mutex.hh  blocked_ell_optimization_bench.cu  blocked_ell_study_bench.cu  cellshard_fetch_bench.cu  cellshard_real_spmm_bench.cu  cellshard_v100_profile.cu  compute_autograd_bench.cu  developmental_time_ab_bench.cc  filter_h5ad_from_preprocess.py  forward_neighbors_bench.cc  preprocess_format_compare_bench.cu  quantized_extreme_ptx_hotspot.cu  quantized_matrix_bench.cu  quantized_transfer_spmm_bench.cu  real_preprocess_bench.cu  scrna_preprocess_bench.cu
bench/preprocess/: benchmark_mutex.hh  nccl_gene_reduce_bench.cu  preprocess_format_compare_bench.cu  scrna_preprocess_bench.cu
bench/real_data/: embryo_spmm_manifest.tsv
bench/seq/: bench_dna2.cu  bench_dna2_cpu.cpp
cmake/: detect_hardware.cmake  probe_cuda_device.cc
components/: README.md
components/CelleraTorch/: AGENTS.md  CMakeLists.txt  README.md
components/CelleraTorch/docs/: torch_bindings.md
components/CelleraTorch/include/CelleraTorch/: bindings.hh  model_ops.hh  quantize.hh
components/CelleraTorch/include/CelleraTorch/models/: dense_reduce.hh  rngFetch.hh
components/CelleraTorch/include/CelleraTorch/models/dense_reduce/: dR_dataloader.hh  dR_infer.hh  dR_model.hh  dR_train.hh
components/CelleraTorch/src/model_ops/: model_ops.cu
components/CelleraTorch/src/model_ops/kernels/: weighted_future_target_kernel_.cuh
components/CelleraTorch/src/quantize/: quantize_cuda.cu
components/CelleraTorch/tests/: bindings_compile_test.cc  dense_reduce_compile_test.cc  model_custom_ops_test.cc  quantize_primitive_test.cc
data/test/: README.md
docs/: README.md  _quarto.yml  architecture.qmd  cellshard_behavior.qmd  compute_and_models.qmd  developer_reference.qmd  index.qmd  ingest_and_runtime.qmd  local_pipeline_ops.qmd  preamble.tex  quantized_transfer_architecture.qmd
docs/pipeline/: README.md
include/Cellerator/: Cellerator.hh  abi.h
python/: module.cc
python/cellerator/: __init__.py  pp.py
scripts/: blocked_ell_subset_h5ad.py  build_public_omics_shortlists.py  cleanup_cuda_12_9_only.sh  run_blocked_ell_study.sh  run_developmental_time_cuda_wrapper.sh  subset_h5ad_by_day.py
src/: cudaHelpers.cuh  load_embryo_mtx_shards.cu  load_embryo_series.cuh  real.cuh  types.cuh  verify.cuh
src/_apps/: README.md  series_workbench.cc  series_workbench.hh  series_workbench_cuda.cu  series_workbench_main.cc
src/_core/: README.md
src/_ingest/: README.md
src/_models/: README.md
src/_rna/: README.md
src/abi/: abi.cu
src/apps/: README.md  series_workbench.cc  series_workbench.hh  series_workbench_cuda.cu
src/compute/: README.md
src/core/: config.cuh.in
src/ingest/: README.md  scan.cuh
src/legacy/: README.md
src/matrix/: dense.cuh  dense.hh  matrix.cuh  matrix.hh  matrix_io.cc  matrix_io.cu  matrix_io.cuh  matrix_io.hh  (+3 more)
tests/: abi_runtime_test.cu  cellerator_python_smoke_test.py  cellshard_access_adapter_compile_test.cc  cellshard_blocked_ell_test.cu  cellshard_blocked_fetch_probe.cu  cellshard_dataset_h5_test.cu  cellshard_first_file_fixture_test.cu  cellshard_series_h5_test.cu  compute_autograd_runtime_test.cu  core_sparse_layout_runtime_test.cu  cudabiotypes_semantics_test.cc  dataset_ingest_compile_test.cu  dataset_runtime_test.cc  dataset_workbench_runtime_test.cc  dense_reduce_compile_test.cc  developmental_time_compile_test.cc  developmental_time_cuda_runtime_test.cc  developmental_time_runtime_test.cu  developmental_time_trajectory_runtime_test.cu  exact_search_runtime_test.cu  forward_neighbors_compile_test.cc  matrix_test.cc  model_custom_ops_test.cc  multi_assay_semantics_test.cc  python_preprocess_smoke.py  quantize_model_test.cc  quantize_primitive_test.cc  quantized_matrix_test.cu  series_ingest_compile_test.cu  series_workbench_runtime_test.cc  sparse_ops_runtime_test.cu  state_reduce_runtime_test.cu  torch_bindings_compile_test.cc  trajectory_compile_test.cu  trajectory_runtime_test.cu  validate_scanpy_preprocess.py
tmp_embryo_one/: embryo_1
todos/: baseplane-dna2-benchmark.md  baseplane-dna2-explicit-widths.md  blocked-ell-optimization-study.md  cellerator-hierarchy-reset-inventory.md  cellerator-hierarchy-reset.md  cellerator-preprocess-rehome.md  cellerator-preprocess-scanpy-validation.md  cellerator-runtime-autotune.md  cellerator-sparse-ml-layout.md  cellerator-umbrella-restructure.md  cellshard-blocked-ell-ingest-runtime.md  cellshard-core-partition-rename.md  cellshard-csr-file-codec-removal.md  cellshard-debug-thread.md  cellshard-file-surface-rename.md  cellshard-first-class-build-export-python.md  cellshard-first-stable-release.md  cellshard-hierarchy-reset.md  cellshard-multi-assay-archive.md  cellshard-packfile-cache-rewrite.md  cellshard-preprocess-gpu-biology-backbone.md  cellshard-runtime-service-contract.md  cellshard-user-metadata-annotations.md  cuda-porting-audit.md  cuda-v100-spmm.md  developmental-time-cuda-ab.md  disk-layout.md  distributed-time-window-neighbor-runtime.md  dual-cuda-optimization-modes.md  gpu-benchmark-sliced-preprocess-campaign.md  gpu-prototype-ingest-blocked-ell.md  gpu-prototype-model-sparse-boundaries.md  gpu-prototype-neighbors-trajectory.md  largest-monolithic-files.md  make-blocked-ell-csh5-fetch-approach-packfile-performance-as-closely-as-possible-with-shard-packed-payloads-reusable-shard-scratch-and-ssd-only-real-data-fetch-benchmarks.md  mosaicell-gpu-biology-backbone.md  planner-layout.md  pointer-first-neighbor-runtime.md  preprocess-guardrails.md  public-omics-shortlist-manuscript-benchmark-seed.md  (+7 more)
(+459 files in other folders)
